--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
 		"@types/eslint": "8.56.0",
 		"@typescript-eslint/eslint-plugin": "^6.0.0",
 		"@typescript-eslint/parser": "^6.0.0",
+		"dotenv": "^16.4.2",
+		"dotenv-expand": "^11.0.3",
 		"eslint": "^8.56.0",
 		"eslint-plugin-svelte": "^2.35.1",
 		"svelte": "^4.2.7",
@@ -25,5 +27,8 @@
 		"typescript": "^5.0.0",
 		"vite": "^5.0.3"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"@vercel/postgres": "^0.7.2"
+	}
 }
